--- a/tests/test_deck_vocab.yaml
+++ b/tests/test_deck_vocab.yaml
@@ -1,3 +1,4 @@
+stop: ['.', '\n']
 tests:
   en_office:
     prompt_file: ./en/deck_vocab.txt
@@ -5,7 +6,7 @@ tests:
       topic: Office
       description: "Common office supplies, furniture, and equipment"
     assertions:
-      equalTo: Pen, pencil, paper, stapler, staples, ruler, eraser, scissors, tape, glue, printer, scanner, copier, computer, monitor, keyboard, mouse, desk, chair, filing cabinet, binder, folder, envelope, calculator
+      equalTo: desk, chair, computer, printer, scanner, copier, fax machine, telephone, stapler, paper clip, pen, pencil, marker, eraser, ruler, calculator, file cabinet, binder clip, paper tray, whiteboard
 
   en_wine:
     prompt_file: ./en/deck_vocab.txt
@@ -13,7 +14,7 @@ tests:
       topic: wine making
       description: types of grapes, fermentation process, aging process, bottling and labeling
     assertions:
-      equalTo: grape, vineyard, fermentation, yeast, aging, barrel, cask, bottle, label, cork, blend, varietal, tannin, aroma, flavo
+      equalTo: grapes, fermentation, aging, bottling, labeling, vineyard, barrel, yeast, sugar, tannin, acidity, aroma, flavor, blend, cork, bottle
 
   es_office:
     prompt_file: ./es/deck_vocab.txt
@@ -21,7 +22,7 @@ tests:
       topic: Oficina
       description: diferentes tipos de equipo de oficina, términos comunes relacionados con la oficina, usos comunes del equipo de oficina
     assertions:
-      equalTo: computadora, impresora, escáner, fax, teléfono, mensajería electrónica, correo electrónico, archivo, carpeta, lápiz, bolígrafo, tijeras, grapadora, pegamento, cinta adhesiva, papel, tarjeta de presentación, etiqueta, agenda, calendario, lista de tareas, marcador permanente, borrador de goma, teclado, ratón, monitor
+      equalTo: computadora, impresora, escáner, fax, teléfono, mensajería electrónica, archivador, carpeta, papelería, lápiz, bolígrafo, tijeras, grapadora, pegamento, cinta adhesiva, libreta de notas, agenda de contactos, calendario de reuniones, presentación de diapositivas
       
   es_wine:
     prompt_file: ./es/deck_vocab.txt
@@ -29,15 +30,15 @@ tests:
       topic: vinificacción
       description: proceso de vinificación, términos de vinificación, equipo de vinificación
     assertions:
-      equalTo: fermentación, maceración, mosto, vino, barricas, botella, destilación, decantación, filtración, maduración, sulfitado, sulfuroso, taninos, uva, vendimia, vinagre, vinificador, alambique, almacenamiento, bodega, cepa, clarificación, embotellado.
+      equalTo: fermentación, maceración, mosto, vino, barricas, botella, destilación, sulfitado, filtrado, clarificación, maduración, uva, vendimia, taninos, acidez, alcohol, aromas
 
   fr_office:
     prompt_file: ./fr/deck_vocab.txt
     params:
-      topic: bureau
-      description: différents types de meubles de bureau, matériaux couramment utilisés pour les meubles de bureau, accessoires de bureau, termes courants du bureau
+      topic: Travailler dans un bureau
+      description: Des choses qu'on trouve dans un bureau, les tâches courantes, les outils et technologies utilisés dans un bureau
     assertions:
-      equalTo: bureau, chaise, fauteuil, étagère, classeur, tiroir, armoire, papier, stylo, crayon, gomme, règle, agrafeuse, perforatrice, trombone, dossiers suspendus, bois, métal, plastique, verre, ordinateur, imprimante, photocopieur, téléphone, fax, lampe de bureau.
+      equalTo: bureau, chaise, ordinateur, imprimante, téléphone, fax, photocopieur, classeur, papier, stylo, crayon, règle, gomme, calendrier, agenda, liste de tâches, courriel, messagerie instantanée, logiciel de bureau, tableau blanc
 
   de_office:
     prompt_file: ./de/deck_vocab.txt
@@ -45,5 +46,5 @@ tests:
       topic: Büro
       description: verschiedene Arten von Büromöbeln, gemeinsame Verwendung von Büromöbeln
     assertions:
-      equalTo: Schreibtisch, Stuhl, Aktenschrank, Bücherregal, Drucker, Scanner, Kopierer, Faxgerät, Computer, Monitor, Tastatur, Maus, Telefon, Papierkorb, Ordner, Hefter, Locher, Klammern, Papier, Stifte, Bleistifte, Radiergummi, Lineal, Notizblock.
+      equalTo: Schreibtisch, Stuhl, Aktenschrank, Bücherregal, Drucker, Scanner, Kopierer, Telefon, Computer, Monitor, Tastatur, Maus, Whiteboard, Notizblock, Ordner, Hefter, Papierkorb
       
